- enrich tensor with aggregate operations along a dimension - decrease dependence of old linear algebra and move towards tensors